tipo de licencias y nombre de la institución

--- a/src/app/escribenos/escribenos.component.html
+++ b/src/app/escribenos/escribenos.component.html
@@ -1,18 +1,17 @@
 <div class="register">
   <div class="container">
     <div class="col-md-6 w3layouts_register_right">
-      <form action="#" method="post">
+      <form>
         <input name="Name" placeholder="First Name" type="text" required="">
         <input name="Name" placeholder="Last Name" type="text" required="">
         <input name="Email" placeholder="Email" type="email" required="">
         <input name="Subject" placeholder="Subject" type="text" required="">
-        <input type="submit" value="Book Now">
+        <input type="submit" value="Enviar">
       </form>
     </div>
     <div class="col-md-6 w3layouts_register_left">
-      <h3><span>Book </span> now</h3>
-      <p>Aliquam sit amet sapien felis. Proin vel dolor sed risus maximus gravida.
-        Ut suscipit orci sem, eget lobortis sem dictum eu. Etiam congue ex sed volutpat fringilla.</p>
+      <h3><span>Envianos un </span> email</h3>
+      <p>Nuestra prioridad es la formación de profesionales capaces, al servicio de la comunidad</p>
     </div>
     <div class="clearfix"> </div>
   </div>
