--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -11,7 +11,7 @@
             <span>Calle Salinas y Esmeraldas </span>
           </p>
           <p class="phone">Telefono : +593(062)977 206  - +593(062)977 189
-            <span>Email : <a href="sindichofespejo@hotmail.com">sindichofespejo@hotmail.com</a></span>
+            <span>Email : <a href="info@sindicatoespejo.com">info@sindicatoespejo.com</a></span>
           </p>
         </div>
       </div>
