--- a/src/app/header2/header2.component.html
+++ b/src/app/header2/header2.component.html
@@ -14,7 +14,7 @@
         <a class="navbar-brand" [routerLink]="['/inicio']">
           <i>
             <img src="../../assets/img/favicon-32x32.png" alt="">
-            Sindicato Espejo
+            Sindicato de Choferes Profecionales del Cantón Espejo
           </i>
 
         </a>
