faltas de ortografía -_-

--- a/src/app/header2/header2.component.html
+++ b/src/app/header2/header2.component.html
@@ -14,7 +14,7 @@
         <a class="navbar-brand" [routerLink]="['/inicio']">
           <i>
             <img src="../../assets/img/favicon-32x32.png" alt="">
-            Sindicato de Choferes Profecionales del Cantón Espejo
+            Sindicato de Choferes Profesionales del Cantón Espejo
           </i>
 
         </a>
@@ -27,7 +27,7 @@
         <ul class="nav navbar-nav">
           <li class="active"><a [routerLink]="['/inicio']"><span data-hover="Inicio">Inicio</span></a></li>
           <!--li><a href='https://grupoprosoft.net/sindicato-web/turnero'><span data-hover="Examen Psicosométrico">Examen Psicosométrico</span></a></li-->
-          <li class=""><a [routerLink]="['/inscripciones']"><span data-hover="Preinscripciones">Preinscriopciones</span></a></li>
+          <li class=""><a [routerLink]="['/inscripciones']"><span data-hover="Preinscripciones">Preinscripciones</span></a></li>
           <li class=""><a [routerLink]="['/turnero']"><span data-hover="Examen Psicosensométrico">Examen Psicosensométrico</span></a></li>
           <li class=""><a [routerLink]="['/requisitos']"><span data-hover="Requisitos">Requisitos</span></a></li>
           <li class=""><a [routerLink]="['/medios']"><span data-hover="Medios Institucionales">Medios Institucionales</span></a></li>
