--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -5,7 +5,7 @@
 <div class="banner-bottom-icons">
   <div class="container">
     <div class="w3l-heading">
-      <h2 class="w3ls_head">Sindicato de Choferes Profecionales del Cantón Espejo</h2>
+      <h2 class="w3ls_head">Sindicato de Choferes Profesionales del Cantón Espejo</h2>
     </div>
   <div class="col-md-4 w3_banner_bottom_icons_left hover15">
     <div class="w3_agile_banner_bottom">
